# bevy_solana_suite

./: .gitignore  Cargo.toml  README.md
.github/agents/: phase2-macro-codegen.agent.md
anchor_test_program/: Anchor.toml  Cargo.toml
anchor_test_program/programs/anchor_test_program/: Cargo.toml
anchor_test_program/programs/anchor_test_program/src/: lib.rs
anchor_test_program/tests/: anchor_test_program.ts
bevy_game/: Cargo.toml
bevy_game/src/: main.rs
bevy_solana_core/: Cargo.toml
bevy_solana_core/src/: lib.rs
bevy_solana_gen/: Cargo.toml
bevy_solana_gen/src/: lib.rs
