[workspace]
resolver = "2"

members = [
    "bevy_solana_gen",
    "bevy_solana_core",
    "bevy_game",
    "anchor_test_program/programs/anchor_test_program",
]

[workspace.dependencies]
bevy = "0.18.1"
solana-sdk = "4.0.1"
solana-client = "3.1.11"
sha2 = "0.10"

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
