[package]
name = "bevy_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "3d",                 # Scenario feature: Includes 3D render, PBR, and tonemapping
    "bevy_winit",         # Scenario feature: Handles windowing
    "x11",                # REQUIRED for WSL2/Kali to communicate with Windows WSLg
    "tonemapping_luts",   # Replaces the old 'tonemapping' feature; essential for HDR
    "default_font"        # Prevents panic when UI or debug text is initialized
] }
bevy_solana_core = { path = "../bevy_solana_core" }
bevy_solana_gen = { path = "../bevy_solana_gen" }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
sha2 = { workspace = true }
bincode = "1.3.0"
serde_json = "1.0.149"
base64 = "0.21.0"
