[package]
name = "bevy_solana_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["bevy_render"] }
serde = { version = "1.0.228", features = ["derive"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
sha2 = { workspace = true }
