[package]
name = "bevy_solana_gen"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
proc-macro2 = "1.0.106"
# ... other dependencies